tests/NormalTests/paczka1/small_fuzzy/89885741.err
Error in line 8: bKp S725 13,1
Error in line 4: vts A894 37,3
Error in line 14: SpUBKGVwZ A552 45,66
